<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/travel2"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="447dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edit_text"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#546E7A"
                android:textSize="38sp" />

            <EditText
                android:id="@+id/signin_email_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/ic_at"
                android:drawablePadding="8dp"
                android:hint="@string/login_email"
                android:padding="5dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/signin_password_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/signin_checkbox_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ubuntu"
                android:minHeight="24dp"
                android:text="@string/login_checkbox"
                android:textColor="#1B5E20"
                android:textSize="14dp" />

            <Button
                android:id="@+id/signin_button_id"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                android:fontFamily="@font/muli_black"
                android:text="@string/login"
                android:textColor="#004D40"
                android:textSize="16dp"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/forgot_password_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="#3949AB"
                android:textSize="15.60dp" />

            <TextView
                android:id="@+id/signup_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:text="@string/account"
                android:textColor="#3949AB"
                android:textSize="15.60dp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>



</LinearLayout>